# Graphs

./: .gitignore  .gitmodules  CMakeLists.txt  Graphs.sln  Graphs.vcxproj  Graphs.vcxproj.filters  README.md  Ut  main.cpp
BenchmarkSamples/: 1.mat
BenchmarkSamples/SSP_test/: graph_10.mat  graph_100.mat  graph_100_thr.mat  graph_102.mat  graph_102_thr.mat  graph_104.mat  graph_104_thr.mat  graph_106.mat  graph_106_thr.mat  graph_108.mat  graph_108_thr.mat  graph_10_thr.mat  graph_110.mat  graph_110_thr.mat  graph_112.mat  graph_112_thr.mat  graph_114.mat  graph_114_thr.mat  graph_116.mat  graph_116_thr.mat  graph_118.mat  graph_118_thr.mat  graph_12.mat  graph_120.mat  graph_120_thr.mat  graph_122.mat  graph_122_thr.mat  graph_124.mat  graph_124_thr.mat  graph_126.mat  graph_126_thr.mat  graph_128.mat  graph_128_thr.mat  graph_12_thr.mat  graph_130.mat  graph_130_thr.mat  graph_132.mat  graph_132_thr.mat  graph_134.mat  graph_134_thr.mat  (+256 more)
BenchmarkSamples/chrom_num_3/: 10.lst  4.lst  6.lst  8.lst  9.lst
BenchmarkSamples/chrom_num_4/: 10.lst  3.lst  4.lst  7.lst  9.lst
BenchmarkSamples/chrom_num_5/: 1.lst  2.lst  4.lst  6.lst
BenchmarkSamples/chrom_num_6/: 10.lst  4.lst  6.lst  7.lst  8.lst
BenchmarkSamples/chrom_num_7/: 1.lst  10.lst  3.lst  4.lst  5.lst  7.lst  8.lst  9.lst
doc/: Doxyfile
examples/: create_list_from_lst_file.cpp
inc/: AdjList.hpp  Algorithms.h  Benchmark.h  Coord.h  DesignatedFactory.h  Examples.h  Factory.h  FileParser.h  FileParser.hpp  Generator.h  Graph.h  Graph.hpp  GraphBase.h  GraphFactory.hpp  GraphList.h  GraphMatrix.h  Graph_list.h  Graph_matrix.cpp  Graph_matrix.h  Graphs.h  IGraph.h  PixelMap.h  Pixel_map.h
lib/: CMakeLists.txt
sample/: GraphML.GRAPHML  adjMat.mat
samples/: GraphML.GRAPHML  GraphMLdirected.GRAPHML  list.lst  listDirected.lst  matrixDirected.mat  matrixUndirected.mat  pixel_map.mat  pixel_map.txt  saved_graphML.GRAPHML  saved_list.lst  saved_matrix.mat  saved_pixel_map.mat  saved_thr_matrix.mat
src/: AdjList.cpp  AdjListGraphFactory.cpp  AdjMatrix.cpp  Algorithms.cpp  Benchmark.cpp  CMakeLists.txt  ColoringAlgorithms.cpp  Coord.cpp  Deserializer.cpp  DesignatedFactory.cpp  Examples.cpp  Generator.cpp  GraphBase.cpp  GraphList.cpp  GraphMatrix.cpp  Graph_list.cpp  Graph_matrix.cpp  PixelMap.cpp  Pixel_map.cpp  generating_thr.cpp  generating_wg.cpp  main.cpp
test/src/: AdjMatrixTest.cpp  CMakeLists.txt
tests/: BasicMatrixInterfaceTests.cpp  GraphFactoryTests.cpp
(+806 files in other folders)
